--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/NoahDavey/js-dev-env/issues"
   },
-  "homepage": "https://github.com/NoahDavey/js-dev-env#readme"
+  "homepage": "https://github.com/NoahDavey/js-dev-env#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "open": "^7.2.1"
+  }
 }
