--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Javascript Development Environment to better facilitate creating new projects",
   "main": "index.js",
   "scripts": {
+    "prestart": "node buildscripts/startupMessage.js",
+    "start": "node buildscripts/srcServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/NoahDavey/js-dev-env#readme",
   "dependencies": {
+    "chalk": "^4.1.0",
     "express": "^4.17.1",
     "open": "^7.2.1"
   }
