--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "js-dev-env",
   "version": "1.0.0",
   "description": "A Javascript Development Environment to better facilitate creating new projects",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "prestart": "node buildscripts/startupMessage.js",
-    "start": "node buildscripts/srcServer.js",
+    "prestart": "babel-node buildscripts/startupMessage.js",
+    "start": "babel-node buildscripts/srcServer.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,20 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "open": "^7.2.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.4.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-md5-hash": "0.0.6"
   }
 }
