Testing & CI/CD Added

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "scripts": {
     "prestart": "babel-node buildscripts/startupMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
     "build": "webpack",
     "open:src": "babel-node buildscripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch":"npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -35,10 +36,13 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
     "eslint": "^7.8.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-watch": "^7.0.0",
     "html-webpack-plugin": "^4.4.1",
+    "jsdom": "^16.4.0",
+    "mocha": "^8.1.3",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
